Inserido atividades do dia

--- a/modulo1/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/template-loja/add-produto.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <p>Nome da lojinha</p>
+        <p>Loja Menina do Céu </p>
     </header>
     
     <nav>
