--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -31,7 +31,7 @@
         <p>Tenho vasta experiência em atendimento ao cliente com foco em resoluções de problemas.</p>
         <p>Já trabalhei com promoções e eventos e como empreendedora no ramo da moda.</p>
         <p>Atualmente estou estudando <b>programação Full Stack</b> na <b>Labenu</b>, pois estou passando por uma transição de carreira. </p>
-        <p>Almejo ingressar na área de <b>tecnologia</b>, como <b>Desenvolvedora.</b> </p>  
+        <p>Almejo ingressar na área de <b>tecnologia</b>, como <b>Desenvolvedora Web.</b> </p>  
 
         </div>
         <img src="./imagens/Design_sem_nome__1_-removebg-preview.png"alt="Meu avatar"width="300" height="300" class="meu-avatar">
