--- a/modulo1/projeto-portfolio/projetos.html
+++ b/modulo1/projeto-portfolio/projetos.html
@@ -20,8 +20,15 @@
     <a href="contato.html" > Entre em contato | </a>
    
 </nav>
+<br>
+<br>
+<br>
+<a href=""><img src="./imagens/projeto Loja.png"width="400" height="auto" ></a>
 
 
+    <b><p class="loja">Projeto Loja Menina do Céu.<b></p></b>
+
+    <p class="loja1">Neste projeto utilizei o HTML e técnicas do CSS.</p>
 
 <footer>
     <h3><p>Siga-me nas redes sociais.</p></h3>
