atualizado o surge: abject-bell.surge.sh

--- a/modulo1/projeto-portfolio/projetos.html
+++ b/modulo1/projeto-portfolio/projetos.html
@@ -26,11 +26,27 @@
 <a href=""><img src="./imagens/projeto Loja.png"width="400" height="auto" ></a>
 
 
-    <b><p class="loja">Projeto Loja Menina do Céu.<b></p></b>
+    <u><b><p class="loja">Projeto Loja Menina do Céu.<b></p></b></u>
 
     <p class="loja1">Neste projeto utilizei o HTML e técnicas do CSS.</p>
 
+<br>
+<br>
+    <a href=""><img src="./imagens/projeto condicionais.png"width="400" height="auto" class="projeto-condicionais"></a>
+
+    <u><b><p class="projeto">Projeto Condicionais.<b></p></b></u>
+
+    <p class="projeto1">Projeto utilizando somente o javaScript.<br> Calculando os valores dos ingressos.</p>
+    <br>
+    <br>
+
+    <a href=""><img src="./imagens/projeto black jack.png"width="400" height="auto" class="projeto-condicionais"></a>
+
+ <u>   <b><p class="projeto">Projeto Black jack.<b></p></b></u>
+
+    <p class="projeto1">Projeto utilizando somente o javaScript.<br> Jogo black Jack.</p>
 <footer>
+
     <h3><p>Siga-me nas redes sociais.</p></h3>
     <a href="https://github.com/fernanda-tiyomi"><img src="./imagens/logo github.gif"width="60" height="60" ></a>
     
